--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -37,6 +37,8 @@ dependencies:
   cupertino_icons: ^1.0.6
   percent_indicator: ^4.2.3
   table_calendar: ^3.1.1
+  fl_chart: ^0.67.0
+  font_awesome_flutter: ^10.7.0
 
 dev_dependencies:
   flutter_test:
